# GoMaths

./: .dockerignore  .gitignore  .npmrc  .prettierignore  CONTRIBUTING.md  HANDOFF.md  README.md  codemagic.yaml  docker-compose.prod.yml  fly.backend.toml  fly.solver.toml  fly.tutor.toml  fly.validation.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy-fly.yml
admin-portal/: README.md
backend-api/: README.md
curriculum-data/: README.md
docs/: Architecture_Decisions.md  Curriculum_Content_Plan.md  DEPLOYMENT_INFO.md  Demo_Script.md  Development_Strategy.md  Environment_Reference.md  MVP_Spec.md  Phase0_Foundation_Notes.md  Phase1_Launch_Plan.md  Preamble.md  TASK_LIST.md  Tutor_Marketplace_Plan.md  codemagic-setup.md
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
game-engine/: README.md
infrastructure/: README.md
mobile-app/: README.md
runbooks/: README.md  curriculum-rollback.md  incident-response.md  payment-dispute.md  popia-dsr.md  tutor-outage.md
scripts/: preflight-env.mjs  verify-tutor-cache.mjs  withKotlinVersion.js
services/ai-services/: Dockerfile  README.md  pyproject.toml
services/ai-services/solver/: engine.py  main.py  providers.py  test_engine.py  test_providers.py
services/ai-services/tutor/: claims.py  curriculum.py  main.py  metrics.py  providers.py  test_claims.py  test_curriculum.py  test_metrics.py  test_providers.py
services/ai-services/validation/: __init__.py  main.py  sympy_validator.py  test_sympy_validator.py
(+312 files in other folders)
